--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sordane-taiga",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.3",
+    "axios": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
