--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.3.1",
     "classnames": "^2.5.1",
+    "discord": "^0.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-refresh-webpack-plugin": "^0.1.0",
